sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:5: error: '=' expected but ';' found.
  for (i<-1 to lgr-1) {
^AlgShellSort:18: error: Unmatched closing brace '}' ignored here
}
^